// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing column alignment all kind of alignments are working 1`] = `
"┌──────────────────────┬──────────────────────────────────────────┬────────────────────┐
│[37m [0m[01mred_left_align_index[0m │[37m [0m[01m                        right_align_text[0m │[37m [0m[01mgreen_value_center[0m │
├──────────────────────┼──────────────────────────────────────────┼────────────────────┤
│[37m [0m[31m2                   [0m │[37m [0m[34m                        This row is blue[0m │[37m [0m[32m      10.212      [0m │
│[37m [0m[31m3                   [0m │[37m [0m[31m       I would like some red wine please[0m │[37m [0m[32m      10.212      [0m │
│[37m [0m[31m4                   [0m │[37m [0m[36m      I would like some cyan wine please[0m │[37m [0m[32m      10.212      [0m │
│[37m [0m[31m5                   [0m │[37m [0m[01mI would like some white_bold wine please[0m │[37m [0m[32m      10.212      [0m │
│[37m [0m[31m7                   [0m │[37m [0m[32m   I would like some green gemuse please[0m │[37m [0m[32m        20        [0m │
│[37m [0m[31m8                   [0m │[37m [0m[33m    I would like some gelb bananen bitte[0m │[37m [0m[32m       100        [0m │
└──────────────────────┴──────────────────────────────────────────┴────────────────────┘"
`;

exports[`Testing column alignment should handle alignment changes after column creation 1`] = `
"┌──────────────────┬───────────────────┐
│[37m [0m[01m            col1[0m │[37m [0m[01m      col2       [0m │
├──────────────────┼───────────────────┤
│[37m [0m[37mchanged to right[0m │[37m [0m[37mchanged to center[0m │
└──────────────────┴───────────────────┘"
`;

exports[`Testing column alignment should handle alignment with unicode characters 1`] = `
"┌────────────┬─────────────┬──────────────┐
│[37m [0m[01mleft_emoji[0m │[37m [0m[01mright_emoji[0m │[37m [0m[01mcenter_emoji[0m │
├────────────┼─────────────┼──────────────┤
│[37m [0m[37m😀        [0m │[37m [0m[37m         🎉[0m │[37m [0m[37m     🌟     [0m │
│[37m [0m[37m😀 text   [0m │[37m [0m[37m    text 🎉[0m │[37m [0m[37m🌟 text 🌟[0m │
└────────────┴─────────────┴──────────────┘"
`;

exports[`Testing column alignment should handle alignment with very long content 1`] = `
"┌──────────────────────┬──────────────────────┬──────────────────────┐
│[37m [0m[01mleft_long           [0m │[37m [0m[01m          right_long[0m │[37m [0m[01m    center_long     [0m │
├──────────────────────┼──────────────────────┼──────────────────────┤
│[37m [0m[37mThis is a very long [0m │[37m [0m[37m This is a very long[0m │[37m [0m[37mThis is a very long [0m │
│[37m [0m[37mtext that should be [0m │[37m [0m[37m text that should be[0m │[37m [0m[37mtext that should be [0m │
│[37m [0m[37mtruncated           [0m │[37m [0m[37m           truncated[0m │[37m [0m[37m     truncated      [0m │
└──────────────────────┴──────────────────────┴──────────────────────┘"
`;

exports[`Testing column alignment should handle mixed content types with different alignments 1`] = `
"┌─────────┬──────────────────┬────────┐
│[37m [0m[01mnumbers[0m │[37m [0m[01mtext            [0m │[37m [0m[01mmixed [0m │
├─────────┼──────────────────┼────────┤
│[37m [0m[37m    123[0m │[37m [0m[37mabc             [0m │[37m [0m[37m123abc[0m │
│[37m [0m[37m-456.78[0m │[37m [0m[37mlonger text here[0m │[37m [0m[37m true [0m │
│[37m [0m[37m      0[0m │[37m [0m[37m                [0m │[37m [0m[37m      [0m │
└─────────┴──────────────────┴────────┘"
`;

exports[`Testing column alignment should handle unicode characters with different alignments 1`] = `
"┌────────────┬─────────────┬──────────────┐
│[37m [0m[01mleft_emoji[0m │[37m [0m[01mright_emoji[0m │[37m [0m[01mcenter_emoji[0m │
├────────────┼─────────────┼──────────────┤
│[37m [0m[37m😀        [0m │[37m [0m[37m         🎉[0m │[37m [0m[37m     🌟     [0m │
│[37m [0m[37m😀 text   [0m │[37m [0m[37m    text 🎉[0m │[37m [0m[37m 🌟 text 🌟 [0m │
└────────────┴─────────────┴──────────────┘"
`;
